Changed my heading name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="30">
     <tr>
       <td><img src="ProfilePic.jpg" width="200" height="350" alt="Logesh profile picture"></td>
-      <td><h1>This is Logesh</h1>
+      <td><h1>Logesh</h1>
       <p>
         <em>He will soon become a <strong>CEO</strong> of his <a href="https://www.apple.com">Own Company</a> </em>
       </p></td>
