--- a/ContactDetails.html
+++ b/ContactDetails.html
@@ -1,33 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>
-      My Contact Details
-    </title>
-  </head>
-  <body>
-    <hr size="3" noshade>
-    <center>
-      <h1>My Contact Details</h1>
-      <br>
-      <h2>Email : logesh.r22@gmail.com</h2>
-      <h2>Phone : +64334522462</h2>
-      <form class="" action="index.html" method="post">
-        <label>Your Name :</label>
-        <input type="text" name="" value="">
-        <br>
-        <br>
-        <label>Do you want to sign up?</label><input type="checkbox" name="" value="">
-        <br>
-        <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<head>
+  <meta charset="utf-8">
+  <title>
+    My Contact Details
+  </title>
+  <link rel="stylesheet" href="css/Styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+</head>
 
-      </form>
-            <input type="submit" name="">
-      </center>
-    <hr size="3" noshade>
+<body>
+  <hr size="3" noshade>
+  <center>
+    <table cellspacing"20">
+      <tr>
+        <td>
+          <h1>My Contact Details</h1>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2>Email : logesh.r22@gmail.com</h2>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2>Phone : +64334522462</h2>
+        </td>
+      </tr>
+    </table>
 
 
 
-  </body>
+
+    <form class="" action="index.html" method="post">
+      <table cellspacing="20">
+        <tr>
+          <td><label class="" style="color:white">
+              <font face="Cinzel">Your Name :</font>
+            </label></td>
+          <td><input type="text" name="" value=""></td>
+        </tr>
+        <tr>
+          <td> <label class="" style="color:white">
+              <font face="Cinzel">Do you want to sign up?</font>
+            </label></td>
+          <td> <input type="checkbox" name="" value=""></td>
+        </tr>
+
+
+
+
+      </table>
+    </form>
+    <br>
+    <br>
+    <input type="submit" name="">
+    <br>
+    <br>
+    <br>
+
+  </center>
+  <hr size="3" noshade>
+
+
+
+</body>
+
 </html>
