--- a/index.html
+++ b/index.html
@@ -4,83 +4,106 @@
 <head>
   <meta charset="utf-8">
   <title>Logesh's personal site</title>
+  <link rel="stylesheet" href="css/Styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
 </head>
 
 <body>
   <center>
-  <table cellspacing="30">
+    <table cellspacing="30">
+      <tr>
+        <td><img src="NewPic.png" width="250" height="250" alt="Logesh profile picture"></td>
+        <td>
+          <h1>Logesh</h1>
+          <p>
+            <em>He will soon become a <strong>CEO</strong> of his Own Company. </em>
+          </p>
+        </td>
+      </tr>
+    </table>
+  </center>
+
+  <hr size="3" noshade>
+  <table cellspacing="20" class="center">
     <tr>
-      <td><img src="ProfilePic.jpg" width="200" height="350" alt="Logesh profile picture"></td>
-      <td><h1>Logesh</h1>
-      <p>
-        <em>He will soon become a <strong>CEO</strong> of his <a href="https://www.apple.com">Own Company</a> </em>
-      </p></td>
+      <td>  <h2>Hobbies And Interests</h2></td>
     </tr>
+    <tr>
+      <td>1.Drawing</td>
+    </tr>
+    <tr>
+      <td>2.Creative Stuffs</td>
+    </tr>
+    <tr>
+      <td>3.Painting</td>
+    </tr>
+
   </table>
 
 
+  <hr size="3" noshade>
+  <table class="center" cellspacing="20">
+    <tr>
+      <td><h2>Education</h2></td>
+    </tr>
+    <tr>
+      <td>1.Completed School Education</td>
+    </tr>
+    <tr>
+      <td>2.Currently purshuing Bachelors degree in <em><strong>Computer Science Engineering</strong></em></td>
+    </tr>
+  </table>
 
-    </center>
+  <table class="center" cellspacing="20">
+    <thead>
+      <tr>
+        <th>Year</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2005-2018</td>
+        <td>Higher Secondary Studies</td>
+      </tr>
+      <tr>
+        <td>2018-2023</td>
+        <td>University Studies</td>
+      </tr>
+    </tbody>
+  </table>
 
-    <hr size="3" noshade>
+  <hr size="3" noshade>
+  <h2>Skills</h2>
+  <table class="center" cellspacing="10">
+    <tr>
+      <td>Photography</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Coding</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Teaching</td>
+      <td>⭐️⭐️⭐️</td>
+    </tr>
+  </table>
+  <hr size="3" noshade>
 
-    <h2>Hobbies</h2>
-    <ul>
-      <li>Coding</li>
-      <li>Drawing</li>
-      <li>Creative Stuffs</li>
-      <li>Painting</li>
-    </ul>
-    <hr size="3" noshade>
-    <h2>Education</h2>
-    <ol>
-      <li>Completed School Education</li>
-      <li>Currently purshuing Bachelors degree in <em><strong>Computer Science Engineering</strong></em></li>
-    </ol>
-    <table>
-      <thead>
-        <tr>
-          <th>Year</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2005-2018</td>
-          <td>Higher Secondary Studies</td>
-        </tr>
-        <tr>
-          <td>2018-2023</td>
-          <td>University Studies</td>
-        </tr>
-      </tbody>
-    </table>
 
-      <hr size="3" noshade>
-    <h2>Skills</h2>
+  <br>
+  <center>
     <table cellspacing="10">
       <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Coding</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Teaching</td>
-        <td>⭐️⭐️</td>
+        <td><strong><a href="Inputs.html">Sign Up</a></strong></td>
+        <td><strong><a href="ContactDetails.html">Contact Me</a></strong></td>
       </tr>
     </table>
-    <hr size="3" noshade>
 
 
-    <br>
-    <center>
-      <strong><a href="Inputs.html">Sign Up</a></strong>
 
-      <strong><a href="ContactDetails.html">Contact Me</a></strong>
-      </center>
+  </center>
 
 
 
@@ -88,3 +111,4 @@
 </body>
 
 </html>
+
