css path changed

--- a/Inputs.html
+++ b/Inputs.html
@@ -1,5 +1,5 @@
 <title>Sign Up</title>
-<link rel="stylesheet" href="css/Styles.css">
+<link rel="stylesheet" href="Styles.css">
 <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
 <center>
   <hr size="3" noshade>
