--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Logesh's personal site</title>
-  <link rel="stylesheet" href="css/Styles.css">
+  <link rel="stylesheet" href="Styles.css">
   <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
 </head>
 
