--- a/ContactDetails.html
+++ b/ContactDetails.html
@@ -12,7 +12,7 @@
   <title>
     My Contact Details
   </title>
-  <link rel="stylesheet" href="css/Styles.css">
+  <link rel="stylesheet" href="Styles.css">
   <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
 </head>
 
