--- a/ContactDetails.html
+++ b/ContactDetails.html
@@ -14,6 +14,7 @@
   </title>
   <link rel="stylesheet" href="Styles.css">
   <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
 </head>
 
 <body>
