--- a/Inputs.html
+++ b/Inputs.html
@@ -1,6 +1,7 @@
 <title>Sign Up</title>
 <link rel="stylesheet" href="Styles.css">
 <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
 <center>
   <hr size="3" noshade>
   <h1>sign up</h1>
