--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Logesh's personal site</title>
   <link rel="stylesheet" href="Styles.css">
   <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
 </head>
 
 <body>
