Changed some font to non-italic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <td>
           <h1>Logesh</h1>
           <p>
-            <em>He will soon become a <strong>CEO</strong> of his Own Company. </em>
+            He will soon become a <strong>CEO</strong> of his Own Company. 
           </p>
         </td>
       </tr>
