Changed sign up

--- a/Inputs.html
+++ b/Inputs.html
@@ -4,7 +4,7 @@
   <link href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
 <center>
   <hr size="3" noshade>
-  <h1>sign up</h1>
+  <h1>Sign Up</h1>
   <hr size="3" noshade>
   <form class="" action="mailto:logesh.r22@gmail.com" method="post" enctype="text/plain">
 
