--- a/ContactDetails.html
+++ b/ContactDetails.html
@@ -45,13 +45,13 @@
       <table cellspacing="20">
         <tr>
           <td><label class="" style="color:white">
-              <font face="Cinzel">Your Name :</font>
+              <font face="Poiret One">Your Name :</font>
             </label></td>
           <td><input type="text" name="" value=""></td>
         </tr>
         <tr>
           <td> <label class="" style="color:white">
-              <font face="Cinzel">Do you want to sign up?</font>
+              <font face="Poiret One">Do you want to sign up?</font>
             </label></td>
           <td> <input type="checkbox" name="" value=""></td>
         </tr>
